# nrf-sdc

./: .gitmodules  Cargo.toml  update-third-party.sh
.cargo/: config.toml
examples/: Cargo.toml
nrf-mpsl/: Cargo.toml
nrf-mpsl-sys/: Cargo.toml  build.rs
nrf-mpsl/src/: flash.rs  hfclk.rs  mpsl.rs
nrf-sdc/: Cargo.toml
nrf-sdc-sys/: Cargo.toml  build.rs
nrf-sdc-sys/include/: nrfx_config.h
nrfxlib-sys/: Cargo.toml  build.rs
