[package]
authors = ["Alex Moon <alex@moonspot.org>"]
description = "Rust bindings to the Nordic Multiprotocol Service Layer"
edition = "2021"
license-file = "third_party/nordic/nrfxlib/LICENSE"
name = "nrf-mpsl-sys"
repository = "https://github.com/alexmoon/nrf-sdc"
version = "0.2.1"
rust-version = "1.77"

[features]
nrf52 = []
nrf53 = []
nrf54l-ns = []
nrf54l-s = []
nrf54h = []

fem = []
"fem-simple-gpio" = ["fem"]
"fem-nrf21540-gpio" = ["fem"]
"fem-nrf21540-gpio-spi" = ["fem"]

[package.metadata.docs.rs]
features = ["nrf52", "fem"]
default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]

[dependencies]
nrfxlib-sys = { version = "0.1.0", path = "../nrfxlib-sys" }

[build-dependencies]
bindgen = "0.72.0"
doxygen-rs = "0.4.2"
