[package]
name = "nrfxlib-sys"
version = "0.1.0"
edition = "2021"

# Linked name in build.rs
links = "nrfxlib-sys"

include = [
    "./*.md",
    "build.rs",
    "src/**",
    "include/**",
    "third_party/arm/CMSIS_5/LICENSE.txt",
    "third_party/arm/CMSIS_5/CMSIS/Core/Include/**",
    "third_party/nordic/nrfx/LICENSE",
    "third_party/nordic/nrfx/mdk/*.h",
    "third_party/nordic/nrfxlib/LICENSE",
    "third_party/nordic/nrfxlib/mpsl/**",
    "third_party/nordic/nrfxlib/softdevice_controller/include/**",
    "third_party/nordic/nrfxlib/softdevice_controller/lib/**"
]

[dependencies]
